made final changes 🚀🔥

--- a/views/email/baseEmail.pug
+++ b/views/email/baseEmail.pug
@@ -36,5 +36,5 @@ html
                   tbody
                     tr
                       td.content-block
-                        span.apple-link Express BoilerPlate, 92 Game Street, Warzone, Lagos 105102
+                        span.apple-link Lagos Nigeria
           //- td  
